# aglime-swap-cdr

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  environment.yaml  pyproject.toml
.github/workflows/: build.yaml
cesm2/download_scripts/: cesm2le.atm.proc.monthly_ave.PRECT-1231-001.py  cesm2le.atm.proc.monthly_ave.QFLX-1231-001.py  cesm2le.atm.proc.monthly_ave.TS-1231-001.py  cesm2le.lnd.proc.monthly_ave.H2OSOI-1231-001.py  cesm2le.lnd.proc.monthly_ave.QRUNOFF-1231-001.py  cesm2le_download.sh  readme.txt
cesm2/process/: create-scepter-clim_ts.ipynb  create-single-ds.ipynb  inputvar_details.txt
scepter/: LICENSE  README.md  run-multiple-test.sh  run-multiple.sh  run-spinup-indiv-yaml.sh  run-spinup-test.sh  run-spinup.sh  scepter-workflow.yaml  tmp.txt
scepter/batch-inputs/: basalt_noFert_hist_fixedRate_v0.csv  basalt_noFert_hist_fixedRate_v0_set1.csv  basalt_noFert_hist_fixedRate_v0_set2.csv  basalt_noFert_hist_fixedRate_v4-imix-1.csv  basalt_noFert_hist_fixedRate_v4-imix-seasonal-1.csv  basalt_noFert_hist_fixedRate_vg2-imix-1.csv  liming_fert_hist_tph7p1_v0.csv  liming_noFert_hist_fixedRate_till_v3-imix.csv  liming_noFert_hist_fixedRate_v0.csv  liming_noFert_hist_fixedRate_v0_first20.csv  liming_noFert_hist_fixedRate_v0_last17.csv  liming_noFert_hist_fixedRate_v1.csv  liming_noFert_hist_fixedRate_v2-imix.csv  liming_noFert_hist_fixedRate_v3-imix.csv  liming_noFert_hist_fixedRate_v4-imix-0.csv  liming_noFert_hist_fixedRate_v4-imix-seasonal-0.csv  liming_noFert_hist_fixedRate_v4-imix-seasonal.csv  liming_noFert_hist_fixedRate_v4-imix.csv  liming_noFert_hist_fixedRate_vg2-imix-1.csv  liming_noFert_hist_tph7p1_v0.csv  meanAnn_basalt_noFert_fixedRate_v0.csv  meanAnn_basalt_noFert_fixedRate_v0_set1of2.csv  meanAnn_basalt_noFert_fixedRate_v0_set2of2.csv  (+43 more)
(+254 files in other folders)
